k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app.kubernetes.io/name: ingress
spec:
  rules:
  - host: 'localhost'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: server-svc
            port:
              number: 4000
